--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 
     <footer style="width: 1349px; margin: auto;" class="container teal margin_top center">
       <p>Ссылки на социальные сети</p>
-      <a href="https://vk.com/id551035255"><img style="width: 50px; height: 50px; padding: 3px;" src="/img/vk.png" alt="VK"></a>
-      <a href="https://t.me/O4enHoroshiy"><img style="width: 56px; height: 56px;" src="/img/tg.png" alt="Telegram"></a>
+      <a href="https://vk.com/id551035255"><img style="width: 50px; height: 50px; padding: 3px;" src="./img/vk.png" alt="VK"></a>
+      <a href="https://t.me/O4enHoroshiy"><img style="width: 56px; height: 56px;" src="./img/tg.png" alt="Telegram"></a>
     </footer>
 
   </body>
