--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </p>
               <p>
                 <i class="margin_right large text_teal"></i
-                >kalamyrka@gmail.com
+                >kalamyrka@yandex.ru
               </p>
               <p>
                 <i class="margin_right large text_teal"></i
